--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,30 +20,41 @@ android {
                 MTA_APPKEY : "A59ICEUZA49V",
                 MTA_CHANNEL: "10086"
         ]
+        signingConfigs {
+            debug {
+                storeFile file("../mapping.jks")
+                storePassword 'Qwe@123'
+                keyPassword 'Qwe@123'
+                keyAlias = 'mappingkey'
+
+            }
+            release {
+                storePassword 'Qwe@123'
+                keyAlias = 'mappingkey'
+                keyPassword 'Qwe@123'
+                storeFile file('../mapping.jks')
+            }
+
+        }
     }
 
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.debug
+            minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    signingConfigs {
-        debug {
-            storeFile file("../mapping.jks")
-            storePassword 'Qwe@123'
-            keyPassword 'Qwe@123'
-            keyAlias = 'mappingkey'
 
-        }
-        release {
-            storePassword 'Qwe@123'
-            keyAlias = 'mappingkey'
-            keyPassword 'Qwe@123'
-            storeFile file('../mapping.jks')
-        }
-
-    }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
@@ -82,4 +93,8 @@ dependencies {
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'com.jeremyliao:live-event-bus:1.6.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.android.material:material:1.1.0'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
